--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: PP's Games
 email: 
 description: > # this means to ignore newlines until "baseurl:"
   PP's Games  
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://pseudopower.github.io/WebGames" # the base hostname & protocol for your site
+baseurl: "/WebGames" # the subpath of your site, e.g. /blog
+url: "http://pseudopower.github.io" # the base hostname & protocol for your site
 github_username:
 
 # Build settings
